# cppLBM

./: .editorconfig  .gitignore  CMakeLists.txt  README.md  build.sh  run.sh
include/: defines.hpp  idx.hpp  lbm.hpp  utils.hpp  vtk.hpp
src/: lbm.cpp  main.cpp  vtk.cpp
tests/unit-tests/: CMakeLists.txt  lbm-tests.cpp
